# animation-project

./: .gitignore  CMakeLists.txt  readme.md
deploy/: lighting.fsh  lighting.vsh  lighting_skin.vsh
src/: Animation.cpp  Animation.h  BallJoint.cpp  BallJoint.h  BaseJoint.cpp  BaseJoint.h  Camera.h  Frustum.cpp  Frustum.h  GLFWRenderer.cpp  GLFWRenderer.h  JointDOF.h  JointFactory.cpp  JointFactory.h  Matrix4.cpp  Matrix4.h  Mesh.cpp  Mesh.h  ParserProperty.cpp  ParserProperty.h  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Skeleton.cpp  Skeleton.h  Skin.cpp  Skin.h  StereoCamera.cpp  TGAFile.cpp  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  main.cpp
